--- a/main.css
+++ b/main.css
@@ -1,9 +1,53 @@
 body{
     margin: 0;
+    font-family: 'Oswald', sans-serif;
 }
+footer {
+    text-align: center;
+    background-color: #000;
+    color: #fff;
+    padding: 30px 0px;
+}
+.gallery {
+    margin: 50px 0px;
+    display: flex;
+    justify-content: space-around;
+}
+.gallery div {
+    text-align: center;
+}
+.about p{
+    font-size: 20px;
 
+}
+.about h2 {
+    text-transform: uppercase;
+    font-size: 30px;
+    letter-spacing: 1px;
+}
+.about {
+    margin: 100px 0px;
+    text-align: center;
+}
+header p {
+    color: white;
+    margin: 0;
+    font-size: 40px;
+}
+h1 {
+    margin: 0;
+    font-size: 50px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    color: #fff;
+}
 header {
-    background-image: url(images/progenter.jpg);
+    background-attachment: fixed;
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: linear-gradient(rgba(0, 0, 0, .3), rgba(0, 0, 0, 0)), url(images/progenter.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
