--- a/main.css
+++ b/main.css
@@ -1,55 +1,72 @@
-body{
-    margin: 0;
-    font-family: 'Oswald', sans-serif;
+body {
+  font-family: 'Oswald', sans-serif;
+  margin: 0;
 }
-footer {
-    text-align: center;
-    background-color: #000;
-    color: #fff;
-    padding: 30px 0px;
-}
-.gallery {
-    margin: 50px 0px;
-    display: flex;
-    justify-content: space-around;
-}
-.gallery div {
-    text-align: center;
-}
-.about p{
-    font-size: 20px;
 
+footer {
+  background-color: #000;
+  color: #fff;
+  padding: 30px 0px;
+  text-align: center;
 }
+
+.gallery {
+  display: flex;
+  justify-content: space-around;
+
+  margin: 50px 0px;
+}
+
+.gallery div {
+  text-align: center;
+}
+
+.about p {
+  font-size: 20px;
+}
+
 .about h2 {
-    text-transform: uppercase;
-    font-size: 30px;
-    letter-spacing: 1px;
+  font-size: 30px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
 }
+
 .about {
-    margin: 100px 0px;
-    text-align: center;
+  margin: 100px 0px;
+  text-align: center;
 }
+
 header p {
-    color: white;
-    margin: 0;
-    font-size: 40px;
+  color: white;
+  font-size: 40px;
+  margin: 0;
 }
+
 h1 {
-    margin: 0;
-    font-size: 50px;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    color: #fff;
+  color: #fff;
+  font-size: 50px;
+  letter-spacing: 1px;
+  margin: 0;
+  text-transform: uppercase;
 }
+
 header {
-    background-attachment: fixed;
+  background-attachment: fixed;
+  background-image: linear-gradient(rgba(0, 0, 0, .3), rgba(0, 0, 0, 0)), url(images/progenter.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+
+  height: 100vh;
+}
+
+@media screen and (max-width: 960px) {
+  .gallery {
     flex-direction: column;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-image: linear-gradient(rgba(0, 0, 0, .3), rgba(0, 0, 0, 0)), url(images/progenter.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100vh;
+  }
 }
